--- a/popup.html
+++ b/popup.html
@@ -4,28 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tab URL Manager</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="popup.css">
 </head>
 <body>
     <div class="container">
-        <header class="header">
-            <h1>Tab URL Manager</h1>
-        </header>
-        <div class="button-group">
-            <button id="copyAllTabsBtn">Copy URLs</button>
-            <button id="pasteAndOpenBtn">Paste & Open</button>
-            <button id="saveCurrentCopyBtn" disabled>Save Session</button>
+        <!-- Action Buttons with Icons -->
+        <div class="actions-grid">
+            <button id="copyAllTabsBtn" class="action-btn" title="Copy All URLs">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/></svg>
+            </button>
+            <button id="pasteAndOpenBtn" class="action-btn" title="Paste and Open URLs">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M19 2h-4.18C14.4.84 13.3 0 12 0S9.6.84 9.18 2H5c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm5 11.5-5 5-5-5 1.41-1.41L11 13.67V6h2v7.67l2.59-2.58L17 13.5z"/></svg>
+            </button>
+            <button id="saveCurrentCopyBtn" class="action-btn" title="Save Current Session" disabled>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z"/></svg>
+            </button>
         </div>
+
+        <!-- Inline Save Form -->
         <div id="saveForm" class="save-form hidden">
             <input type="text" id="saveNameInput" placeholder="Enter session name">
-            <button id="confirmSaveNameBtn">Confirm</button>
+            <button id="confirmSaveNameBtn" title="Confirm Save">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
+            </button>
         </div>
-        <section class="saved-tabs-section">
-            <h2 class="saved-tabs-heading">Synced Sessions</h2>
-            <div id="savedTabsList" class="saved-tabs-list"></div>
+
+        <!-- Saved Sessions List -->
+        <div class="list-container">
             <p id="noSavedTabsMessage" class="hidden">No saved sessions.</p>
-        </section>
-        <div id="messageBox" class="message-box" aria-live="polite" style="visibility: hidden;"></div>
+            <div id="savedTabsList">
+                <!-- Saved items will be injected here by JS -->
+            </div>
+        </div>
+
+        <!-- Floating Message Box -->
+        <div id="messageBox" class="message-box" aria-live="polite"></div>
     </div>
     <script src="popup.js"></script>
 </body>
