feat: Implement drag-and-drop functionality for saved sessions
- Updated popup.css to add styles for draggable items and placeholders.
- Included Sortable.js in popup.html for drag-and-drop support.
- Modified popup.js to initialize Sortable and handle reordering of saved sessions.
- Removed automatic sorting of sessions; user can now control order.
- Enhanced message display logic for better visibility.

--- a/popup.html
+++ b/popup.html
@@ -46,6 +46,7 @@
 
         <div id="messageBox" class="message-box" aria-live="polite"></div>
     </div>
+    <script src="Sortable.min.js"></script>
     <script src="popup.js"></script>
 </body>
 </html>
